# GOLDEN-AI-PRO

./: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
config/: logging_config.py  mt5_config.py  settings.py
dashboard/: package.json  tsconfig.json
dashboard/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: index.tsx
dashboard/src/services/: api.ts
dashboard/src/store/: useStore.ts
docs/: api.md  deployment.md
mt5/Experts/: GoldenAI_Server.mq5
notebooks/: backtesting.ipynb  data_exploration.ipynb  model_training.ipynb
scripts/: backup.sh  deploy.sh  setup.sh
src/ai/: fusion_engine.py
src/ai/inference/: predictor.py  uncertainty.py
src/ai/models/: ensemble_model.py  lstm_attention.py  online_learning.py  transformer_model.py
src/ai/training/: cross_validator.py  hyperparameter_tuner.py  trainer.py
src/analysis/: correlation_engine.py  smc_analyzer.py
src/analysis/price_action/: candle_patterns.py  support_resistance.py  trend_analysis.py
src/analysis/sentiment/: cot_analysis.py  news_analyzer.py  social_sentiment.py
src/analysis/smc/: fair_value_gaps.py  kill_zones.py  liquidity.py  market_structure.py  order_blocks.py  smc_engine.py
src/analysis/volume_profile/: poc_analysis.py  value_area.py  volume_profile.py
src/api/: main.py
src/api/middleware/: auth.py  rate_limit.py
src/api/routes/: analysis.py  models.py  trading.py  websocket.py
src/core/: data_manager.py  event_bus.py  state_machine.py
src/data/: mt5_mock.py  multi_asset_collector.py
src/data/connectors/: exchange_connector.py  mt5_connector.py  mt5_zmq_connector.py
src/data/processors/: data_cleaner.py  feature_engineering.py  multi_timeframe.py
src/data/storage/: parquet_storage.py  redis_cache.py  timescale_db.py
src/execution/: execution_engine.py  order_manager.py  paper_trading.py  slippage_analyzer.py
src/ml/: features.py
src/monitoring/: alert_system.py  health_checker.py  performance_tracker.py  trade_logger.py
src/risk/: drawdown_protection.py  kelly_criterion.py  position_sizing.py  risk_manager.py  trailing_stop.py
src/strategies/: correlation_strategy.py
tests/: test_correlation.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_mt5_connector.py
tests/unit/: test_risk_manager.py  test_smc_engine.py
